--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
 <head>
     <title>Minha Pagina</title>
+    <style>
+        p {
+            color:orange;
+            background-color: black;
+            font-family: Verdana, Geneva, Tahoma, sans-serif; }
+
+            h1 {
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                color: brown;
+
+            }
+        }
+    </style>
+
 </head>
 <body>
     <h1>Minha Pagina de Estudos</h1>
@@ -10,7 +24,7 @@
    <cite>"A vingança nunca é plena, mata a alma e a envenena."- Seu Madruga.</cite>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit cum veniam deleniti magnam sed quos nemo assumenda, illum vitae et ex natus quis corrupti temporibus, libero tenetur velit cumque mollitia.</p>
 
-   <p><img src="Imagens/capivara.jpg" alt=""></p>
+   <img src="Imagens/capivara.jpg" alt="">
 
 
 
