--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             }
         }
     </style>
+    <script>
+        document.write("Olá mundo,JavaScript!");
+    </script>
 
 </head>
 <body>
